<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".CriarProjetoActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            android:inputType="textCapCharacters"/>
    </android.support.design.widget.TextInputLayout>


    <Button
        style="@style/ButtonDefault"
        android:text="@string/adicionar_membro"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/membros"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="32dp"/>

    <Button
        android:id="@+id/novo_projeto"
        style="@style/ButtonDefault"
        android:text="@string/novo_projeto"/>



</LinearLayout>